--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Use Python Playwright to get your highlights and notes from the A
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "python-dotenv>=1.1.0",
     "pyzotero>=1.6.11",
 ]
